(add new changes on top of this file)

Änderungen
----------
v0.5.3 (??.11.2009)
* TSDAM: Usage of tx_dam_media removed. This class can't handle two dam records for one single media path.

v0.5.2 (07.11.2009)
* SearchBase: OP_INSET_INT works for multiple values
* TSDAM: new implementation of fetchFileList()
* BaseView: automatic call of tx_rnbase_util_BaseMarker::callModules()
* Small bugfix for map rendering

v0.5.1 (28.10.2009) (not released)
* tx_rnbase_util_DB::doSelect(): new options sqlonly and union
* tx_rnbase_util_SearchBase: Support for sqlonly and union
* tx_rnbase_util_SearchBase: Some modifications for alias support. Thanks to Lars Heber!
* New class tx_rnbase_util_SearchGeneric: a configurable implementation for tx_rnbase_util_SearchBase.

v0.5.0 (25.09.2009)
* Performancetests for views (subclasses of BaseIOC) and ListBuilder.
* TSDAM: i18n-Support for DAM 1.1.0 and higher only
* BaseMarker: new method findUnusedCols()

v0.4.5 (21.09.2009) (not released)
* Memory output in sql debug
* New parameter $template for BaseMarker::initLink()
* BaseFilter::init() with return value

v0.4.4 (20.09.2009) (not released)
* FormatUtil: Support for dynamic markers. Fields starting with "dc" will be added as columns to marker arrays.
* More debug information for ListBuilder and Plugin-Views.

v0.4.3 (05.09.2009)
* New option forcewrapper in SearchBase. This allows userdefined "what" and "groupby" in combination with "wrapperclass".
* New method getConfId() in tx_rnbase_action_BaseIOC
* tx_rnbase_util_BaseMarker::initLink() has support for page aliases. Thanks to Holger Gebhardt!
* tx_rnbase_util_TSDAM: New option forcedIdField.
* New method tx_rnbase_util_TSDAM::deleteReferences()
* TSDAM: Output of translated DAM records. Thanks to Lars Heber.
* SearchBase: Support for aliases in SQL statements.

v0.4.2 (22.05.2009)
* Rendering of DAM images with new marker ###MEDIA_PARENTUID###. This contains the uid of the parent record.