@@ -4,6 +4,7 @@
 ----------
 v0.5.3 (??.11.2009)
 * TSDAM: Usage of tx_dam_media removed. This class can't handle two dam records for one single media path.
+* New base class for backend modules: tx_rnbase_mod_BaseModule
 
 v0.5.2 (07.11.2009)
 * SearchBase: OP_INSET_INT works for multiple values
